# KLib-Python

./: .gitignore  README.md  pyproject.toml
src/klib/: replace_multibyte.py
