[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "KLib-Python"
description = "My Private Python Library"
readme = "README.md"
authors = [
    { name = "Keisuke Magara", email = "Keisuke-Magara.dev@outlook.com" },
]
keywords = []
classifiers = ["Programming Language :: Python :: 3"]
# requires-python = ">=3.7"
dynamic = ["version", "dependencies"]

[project.urls]
Source = "https://github.com/Keisuke-Magara/KLib-Python"

[project.scripts]
multibyte-resolver = "klib.replace_multibyte:cmd"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]
write_to = "src/klib/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
mypy_path = ["src"]
disallow_incomplete_defs = true
